@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-16-6
+DATE: 09/09/2020
+STAFF: sc
+TR13374 - New MRK_C4AM.rpt
+
 TAG: qcreports_db-6-0-16-5
 DATE: 08/27/2020
 STAFF: sc
